--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_speed_dial:
-  unicorndial: ^1.1.5
+  flutter_speed_dial: ^2.1.1
+  table_calendar: ^2.3.3
+  shared_preferences: ^0.5.4+5
 
   cupertino_icons: ^1.0.0
 
