--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
   flutter_speed_dial: ^2.1.1
   table_calendar: ^2.3.3
   shared_preferences: ^0.5.4+5
+  firebase_core: ^1.0.1
+  firebase_database: ^6.1.0
+  flutter_cupertino_date_picker: ^0.8.0
+  intl: ^0.15.8
 
   cupertino_icons: ^1.0.0
 
