--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,8 @@ dependencies:
   firebase_database: ^6.1.0
   flutter_cupertino_date_picker: ^0.8.0
   intl: ^0.15.8
-
   cupertino_icons: ^1.0.0
+  flutter_svg: ^0.19.1
 
 dev_dependencies:
   flutter_test:
@@ -30,3 +30,8 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+
+  assets:
+    - assets/images/
+    - assets/icons/
+    - assets/person.png
