working on feature preview

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   intl: ^0.17.0
   cupertino_icons: ^1.0.0
   flutter_svg: ^0.19.1
+  store_redirect: ^1.0.2
+  open_appstore: ^1.0.2
+  feature_discovery: ^0.14.0
 
 dev_dependencies:
   flutter_test:
