working tooltips in tutorial.dart

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   store_redirect: ^1.0.2
   open_appstore: ^1.0.2
   feature_discovery: ^0.14.0
+  simple_tooltip: ^0.1.16
 
 dev_dependencies:
   flutter_test:
