--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,30 +6,28 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_speed_dial: ^3.0.5
-  table_calendar: ^2.3.3
+
   shared_preferences: ^2.0.5
-  firebase_core: ^1.0.1
-  firebase_database: ^6.1.0
+  provider: ^5.0.0
   flutter_cupertino_date_picker: ^1.0.26+2
   intl: ^0.17.0
   cupertino_icons: ^1.0.0
-  flutter_svg: ^0.19.1
-  store_redirect: ^1.0.2
-  open_appstore: ^1.0.2
+  flutter_svg: ^0.22.0
   feature_discovery: ^0.14.0
-  simple_tooltip: ^0.1.16
+  store_redirect: ^1.0.2
+  table_calendar: ^2.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_native_splash: ^0.3.0
+  flutter_native_splash: ^1.1.7+1
 
 flutter:
 
