--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   feature_discovery: ^0.14.0
   store_redirect: ^1.0.2
   table_calendar: ^2.3.0
+  firebase_auth: ^1.0.3
+  firebase_core: ^1.0.3
   url_launcher: ^6.0.3
   expansion_tile_card: ^2.0.0
 
