--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   table_calendar: ^2.3.0
   firebase_auth: ^1.0.3
   firebase_core: ^1.0.3
+  cloud_firestore: ^1.0.7
 
 dev_dependencies:
   flutter_test:
